--- a/DesomodGaren/garen.csproj
+++ b/DesomodGaren/garen.csproj
@@ -36,37 +36,37 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="clipper_library">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\clipper_library.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\clipper_library.dll</HintPath>
     </Reference>
     <Reference Include="Igniter">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\Igniter.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\Igniter.dll</HintPath>
     </Reference>
     <Reference Include="isCCd">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\isCCd.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\isCCd.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\LeagueSharp.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.AppDomainManager">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\LeagueSharp.AppDomainManager.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\LeagueSharp.AppDomainManager.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="LibGit2Sharp">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\LibGit2Sharp.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\LibGit2Sharp.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\SharpDX.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Toolkit">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\SharpDX.Toolkit.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\SharpDX.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Toolkit.Graphics">
-      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\\System\SharpDX.Toolkit.Graphics.dll</HintPath>
+      <HintPath>C:\Users\desomond\Desktop\LeagueSharp\System\SharpDX.Toolkit.Graphics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
